[package]
name = "justix"
version = "0.1.0"
authors = ["Justin Alan Ryan <justin.alan.ryan@gmail.com>"]
edition = "2018"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-justix.json"

[dependencies]
bootloader = "0.3.4"
volatile = "0.2.3"
spin = "0.4.9"
array-init = "0.0.3"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]
